get the add bill API working
