# pkg/constants.go
@@ -5,6 +5,7 @@ const (
 	DashboardRoute string = "/dashboard"
 	SignUpRoute    string = "/users/signup"
 	AllUsersRoute  string = "/users/all"
+	AddBill        string = "/bills/add"
 )
 
 const ContentType string = "Content-Type"
